# fuqr

./: .gitignore  LICENSE  README.md  build.ps1  pyproject.toml
.github/workflows/: release.yml
src/fuqr/: __init__.py  __main__.py  common.py  const.py  generator.py  reader.py  types.py  util.py
src/qr/: __main__.py
