[project]
name = "fuqr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=9.0.2",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "qrcode>=8.0",
]

[project.scripts]
fuqr = "fuqr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
