[project]
name = "fuqr"
description = "デスクトップQRコード読み取りソフト"
authors = [
  { name = "futa-t" },
]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "mss>=9.0.2",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "pyperclip>=1.9.0",
    "qrcode>=8.0",
]

[tool.hatch.version]
path = "src/fuqr/common.py"

[tool.uv]
dev-dependencies = []

[project.gui-scripts]
fuqr = "fuqr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore=["F401"]
